# tairitsu-rs

./: .env.example  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  shell.nix
.github/workflows/: docker-image.yml
src/: main.rs
src/commands/: help.rs  invite.rs  mod.rs  profile.rs  recent.rs  song.rs  status.rs
src/constants/: mod.rs  version.rs
src/migrator/: m_20240325_000001_initial_setup.rs  m_20240404_000002_add_version_to_songs.rs  m_20240406_000003_jacket_chart_id.rs  mod.rs
src/models/: arcaea.rs  charts.rs  jackets.rs  mod.rs  prelude.rs  songs.rs  users.rs
src/utils/: mod.rs  potential.rs
utils/: parse_songlist_packlist.py
