[package]
name = "tairitsu-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
chrono = { version = "0.4.37", features = ["serde"] }
dotenvy = "0.15.7"
poise = "0.6.1"
reqwest = { version = "0.12.2", features = ["cookies", "json"] }
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
rustc_version_runtime = "0.3.0"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "0.12.15"
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
simsearch = "0.2.4"
thousands = "0.2.0"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
